# kaggle_Happywhale

./: '  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  ensemble.py  pyproject.toml  run.sh  setup.cfg
exp/: exp000.py  exp001-v2.py  exp001.py  exp002-v2.py  exp002-v3.py  exp002.py  exp003.py  exp004.py  exp005-ensemble.py  exp005-imgsize128.py  exp005-imgsize256.py  exp005-imgsize384.py  exp006.py  exp007.py  exp008.py  exp009.py  exp010.py  exp011-img640.py  exp011-img736-all.py  exp011-img736.py  exp011-imgsize640-all.py  exp011.py  exp012.py  late-exp012.py  late-exp013.py  late-exp014.py  late-exp015.py  late-exp016.py  late-exp017.py
src/core/: logger.py
src/models/: dolg.py
src/tasks/: fetch_datasets.py
